Not freeing dynstr_cstring memory blocks when setting shape keys #34938

Closed
opened 2013-04-09 19:07:02 +02:00 by Jakub Zolcik · 3 comments

%%%--- Short description of error ---
File: source\blender\makesrns\intern\rna_access.c
Function: char *RNA_path_full_struct_py(struct PointerRNA *ptr)
Line: 4284
Problem: "char *id_path" is not being freed at the end of the function
Solution:

   Replace:
   MEM_freeN(data_path);
   With:
   MEM_freeN(id_path);
   if (data_path) {
        MEM_freeN(data_path);
   }

Sorry for not attaching Patch.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create object with shape keys -> add cloth modifier -> change shape key a few times -> exit blender ->

"Error: Not freed memory blocks
dynstr_cstring len: 24"%%%

%%%--- Short description of error --- File: source\blender\makesrns\intern\rna_access.c Function: char *RNA_path_full_struct_py(struct PointerRNA *ptr) Line: 4284 Problem: "char *id_path" is not being freed at the end of the function Solution: ``` Replace: MEM_freeN(data_path); With: MEM_freeN(id_path); if (data_path) { MEM_freeN(data_path); } ``` Sorry for not attaching Patch. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create object with shape keys -> add cloth modifier -> change shape key a few times -> exit blender -> "Error: Not freed memory blocks dynstr_cstring len: 24"%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report and patch, Commited it (with minor change -- id_path is always non-null, and left change around null-check of data_path for until it causes actual issues) at rev55926.%%%

%%%Thanks for the report and patch, Commited it (with minor change -- id_path is always non-null, and left change around null-check of data_path for until it causes actual issues) at rev55926.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34938
No description provided.