Fix #34938: Not freeing dynstr_cstring memory blocks when setting shape keys

In fact almost any rna pointer-to-string had a memory leak.

Patch by Jakub Zolcik (sftd) with minor modification.